--- a/dynamic_website/css/styles.css
+++ b/dynamic_website/css/styles.css
@@ -108,6 +108,7 @@ body
     text-align: center;
     width: 75%;
     height: 100%;
+    border-top: 2px solid black;
     border-left: 2px solid black;
     border-right: 2px solid black;
 
